@@ -1,4 +1,3 @@
-INCLUDES = $(all_includes)
 METASOURCES = AUTO
 
 AM_CXXFLAGS = -Wreturn-type -ffast-math $(CXX_CPU_SWITCH)
@@ -19,11 +18,23 @@ jack_src    =
 jack_lflags =
 endif
 
+if HAVE_ARTS
+arts_src      = AudioOutputDeviceArts.cpp AudioOutputDeviceArts.h
+arts_ladd     = @ARTS_LIBS@
+arts_includes = @ARTS_CFLAGS@
+else
+arts_src      =
+arts_ladd     =
+arts_includes =
+endif
+
+INCLUDES = $(all_includes) $(arts_includes)
+
 noinst_LTLIBRARIES = liblinuxsampleraudiodriver.la
 liblinuxsampleraudiodriver_la_SOURCES = \
 	AudioChannel.cpp AudioChannel.h \
 	AudioOutputDevice.cpp AudioOutputDevice.h \
 	AudioOutputDeviceFactory.cpp AudioOutputDeviceFactory.h \
-	$(alsa_src) $(jack_src)
-liblinuxsampleraudiodriver_la_LIBADD = $(alsa_ladd)
+	$(alsa_src) $(jack_src) $(arts_src)
+liblinuxsampleraudiodriver_la_LIBADD = $(alsa_ladd) $(arts_ladd)
 liblinuxsampleraudiodriver_la_LDFLAGS = $(jack_lflags)
